--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.344.0",
     "mysql2": "^3.15.1",
